apps/hydra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${hydra_service_name}
  namespace: ${hydra_namespace}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.kubernetes.io/hostname: hydra${public_host_suffix}.${delegating_domain}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: hydra${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${hydra_service_name}
                port:
                  number: ${hydra_service_port}
  tls:
    - secretName: hydra-tls
      hosts:
        - hydra${public_host_suffix}.${delegating_domain}
